--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,15 +65,16 @@ html{
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
-    top: 30%;
-    right: 8%;
+    position: relative;
+    top: 0%;
+    left: 30%;
 }
 .headings{
     font-family: century;
     font-size: 2rem;
     text-align: center;
     margin: 40px 0px;
+    text-shadow: 2px 2px 5px blue;
 }
 .btn{
     padding: 10px 35px;
@@ -192,7 +193,7 @@ html{
     padding: 10px;
 }
 .box p{
-    line-height: 1.6rem;
+    line-height: 1.2rem;
     word-spacing: .3rem;
 }
 /* contact section */
